# t-mem

./: .env.example  .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: extract.md
.claude/hooks/: fm-retrieve.sh  future-memory-pre-compact.sh
docs/: DOMAIN.md  QUALITY.md  SECURITY.md  prd-memory-selection-adapter.md
docs/design-docs/: 2026-03-29-future-memory-mvp-design.md  index.md
docs/exec-plans/active/: 2026-03-29-future-memory-mvp.md  2026-03-31-extraction-pipeline-rebuild.md  2026-04-01-tip-consolidation.md
docs/exec-plans/completed/: 2026-04-03-baseline.md
docs/product-specs/: index.md
docs/talk/: index.html
scripts/: discover_failures.py  discover_failures_results.json
scripts/ci/: check_docs.py  check_file_size.py  check_no_print.py
src/fm/: attribution.py  baseline.py  cli.py  consolidator.py  embeddings.py  extractor.py  intelligence.py  llm.py  models.py  parser.py  retriever.py  segmenter.py  store.py
src/fm/prompts/: attribution.py  consolidate.py  extract.py  intelligence.py  segment.py  tips_gen.py
tests/: conftest.py  test_attribution.py  test_baseline.py  test_cli.py  test_consolidator.py  test_embeddings.py  test_extractor.py  test_extractor_pipeline.py  test_integration.py  test_intelligence.py  test_llm.py  test_models.py  test_parser.py  test_prompts.py  test_retriever.py  test_segmenter.py  test_store.py
