[project]
name = "future-memory"
version = "0.1.0"
description = "Trajectory-informed memory generation for self-improving agent systems"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "voyageai>=0.3.0",
    "requests>=2.31",
    "numpy>=1.26",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
fm = "fm.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
